tests/fixtures/invalid/list_floordiv_bool.py
# Cannot floor divide List[int] and Bool
x: list[int] = [1, 2, 3] // True
